--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,13 @@ nav ul li {
     font-family: "Montserrat";
     font-size: 0.7rem;
 }
+
+main {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+
