--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,23 +4,21 @@
 header {
     background-color: #E2FFB4;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    align-items: center;
+
 }
 
 nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-
-
+    flex: 1;
+    justify-content: space-between;
 }
 
 nav ul {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
     list-style: none;
+    gap: 1.5rem;
 }
 
 nav ul li {
@@ -29,12 +27,43 @@ nav ul li {
     font-size: 0.7rem;
 }
 
+.language-menu {
+    margin-left: auto;
+    padding-right: 2.5rem;
+}
+
+.language-menu ul {
+    display: flex;
+    gap: 0.3rem;
+}
+
 main {
     background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: "Montserrat";
 }
 
+.cover {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 10rem;
+    gap: 0.1rem;
+}
 
+h1 {
+    font-family: "Pacifico";
+    font-size: 4rem;
+    margin: 0;
+    padding: 0;
+}
+
+.cover h4 {
+    font-family: "Overpass Mono";
+    font-size: 1.1rem;
+    margin: 0;
+    padding: 0;
+}
