--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,20 @@ header {
     background-color: #E2FFB4;
     display: flex;
     align-items: center;
+    height: 6rem;
+}
 
+.header-logo {
+    padding-left: 2rem;
+    display: flex;
+    align-items: center;
+}
+
+.header-logo img {
+    width: 30%;
+    height: 30%;
+    border-radius: 50%;
+    margin: 0.4rem;
 }
 
 nav {
@@ -24,7 +37,7 @@ nav ul {
 nav ul li {
     padding: 0.5rem;
     font-family: "Montserrat";
-    font-size: 0.7rem;
+    font-size: 1.2rem;
 }
 
 .language-menu {
@@ -50,20 +63,77 @@ main {
     text-align: center;
     display: flex;
     flex-direction: column;
-    margin: 10rem;
+    margin: 17rem;
     gap: 0.1rem;
 }
 
 h1 {
     font-family: "Pacifico";
-    font-size: 4rem;
+    font-size: 8rem;
     margin: 0;
     padding: 0;
 }
 
 .cover h4 {
     font-family: "Overpass Mono";
-    font-size: 1.1rem;
+    text-align: center;
+    font-size: 1.8rem;
     margin: 0;
     padding: 0;
+}
+
+.products-viewer {
+    background-color: #FFC59C;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.products-viewer h2 {
+    font-family: "Pacifico";
+    font-size: 2rem;
+    margin: 5rem;
+    color: white;
+}
+
+.workshop-viewer {
+    background-color: #F2E7D5;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.workshop-viewer h2 {
+    font-family: "Pacifico";
+    font-size: 2rem;
+    margin: 5rem;
+    color: white;
+}
+
+footer {
+    background-color:#E2FFB4;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+}
+
+.page-info {
+    font-family: "Overpass Mono";
+    font-size: 1rem;
+    margin: 5rem;
+    color: black;
+}
+
+.endfooter {
+    background-color: black;
+    width: 100%;
+    height: auto;
+    display: flex;
+    justify-content: center;
+    color: white;
+    font-family: "Overpass Mono";
+    font-size: 0.8rem;
 }
