--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -1,16 +1,50 @@
      
-     
-     .caja {
-            display: inline-block;
-            width: 400px;
-            height: 500px;
-            background-color: rgb(19, 98, 124);
-            margin: 30px 0;
-            border: 2px solid #333;
-            border-radius: 15px;
-         
-        }
+  
+    * {
+    margin: 0;
+    padding: 0;
+  
+}
 
+    
+    
+    header {
+        background-color: #E2FFB4;
+        display: flex;
+        align-items: center;
+        height: 6rem;
+        padding: 0 2rem;
+    }
+
+    .header-logo {
+        display: flex;
+        align-items: center;
+    }
+
+    .header-logo img {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        margin-right: 1rem;
+    }
+
+    nav {
+        display: flex;
+        flex: 1;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+
+    .language-menu ul {
+        display: flex;
+        gap: 0.5rem;
+        margin: 0;
+        padding: 0;
+    }
+
+
+/*--CAJA QUE RODEA EL FORMULARIO DE FILTROS Y PRODUCTOS--> */
 
     .containerform {
             width: 100%;
@@ -31,36 +65,60 @@
             justify-content: space-around;
             align-items: center;
         }
+
+
+        /*--CAJA DONDE IRIAN LOS PRODUCTOS--> */
+     #caja {
+            display: inline-block;
+            width: 400px;
+            height: 500px;
+            background-color: rgb(19, 98, 124);
+            margin: 30px 0;
+            border: 2px solid #333;
+            border-radius: 15px;
+         
+        }
     
 
+        /*--FORMULARIO DE FILTROS--> */
+
     .filtro label {
-        font-weight: bold;
-        margin-left: 50px;
-        
+                font-weight: bold;
+                margin-left: 50px;
+
         }
 
 
     .filtro input,
     .filtro select {
-        padding: 5px;
-        border-radius: 5px;
-        border: 1px solid #999;
-        }
+                padding: 5px;
+                border-radius: 5px;
+                border: 1px solid #999;
+       }
 
 
-    .filtro button {
-        padding: 8px;
-        background: #13627c;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        }
+            .filtro button {
+                padding: 8px;
+                background: #13627c;
+                color: white;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                }
 
 
-    .filtro button:hover {
-        background: #0f5167;
-        }
+            .filtro button:hover {
+                background: #0f5167;
+       }
+                
+                
+        
+        
+        
+        
+        
+        
+        /* FOOTER */
         footer {
             background-color:#E2FFB4;
             width: 100%;
@@ -86,3 +144,12 @@
             font-family: "Overpass Mono";
             font-size: 0.8rem;
         }
+
+
+
+
+
+
+
+
+
