--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -57,28 +57,41 @@
     
 
 
-
-    .container {
-            width: 100%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            align-items: center;
-        }
-
-
         /*--CAJA DONDE IRIAN LOS PRODUCTOS--> */
-     #caja {
-            display: inline-block;
-            width: 400px;
-            height: 500px;
-            background-color: rgb(19, 98, 124);
-            margin: 30px 0;
-            border: 2px solid #333;
-            border-radius: 15px;
-         
-        }
-    
+    .container {
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    padding: 1rem;
+    font-family: "Overpass Mono";
+    }
+
+    #caja {
+    margin: 2rem;
+    border: 1px solid black;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;   /* Alinea verticalmente */
+    align-items: center;      /* Centra todo */
+    justify-content: space-between; /* Mantiene el texto abajo */
+    height: 350px;            /* MISMA altura para todas las cards */   
+    }
+
+    .caja-img{
+    width: 100%;
+    height: 300px;            /* Todas las imágenes con la misma altura */
+    object-fit: cover;        /* Recorta la imagen sin deformarla */
+    transition: transform 0.4s ease; /* Suaviza la animación */
+    cursor: pointer;
+    }
+
+    #caja:hover .caja-img {
+    transform: scale(1.1); /* La imagen se agranda */
+    }
+    .caja-informacion {
+    text-align: center;
+    margin-top: 1rem;
+    }
+
 
         /*--FORMULARIO DE FILTROS--> */
 
