--- a/assets/css/Detalle.css
+++ b/assets/css/Detalle.css
@@ -13,8 +13,8 @@
         }
 
         .foto {
-            width: 200px;
-            height: 400px;
+            width: 400px;
+            height: auto;
             border-style: solid;
             background-color: antiquewhite;
         }
