--- a/assets/css/Detalle.css
+++ b/assets/css/Detalle.css
@@ -41,3 +41,9 @@
     border: 1px solid #888;
     width: 80%;
 }
+
+@media (max-width: 600px) {
+    .contenedor{
+        flex-direction: column;
+    }
+}
