--- a/assets/css/Detalle.css
+++ b/assets/css/Detalle.css
@@ -1,25 +1,39 @@
 /*tarjeta del producto*/
-.cuadro {
-    width: 50%;
-    border-style: solid;
-    padding: 10px;
-}
-
 .contenedor {
     display: flex;
-    justify-content: space-between;
+    width: 80%;
     border-style: solid;
-    padding: 10px;
-    max-width: 800px;
+    padding: 20px;
     margin: auto;
+    gap: 20px;
+}
+
+.cuadrofoto {
+    width: 50%;
+    overflow: hidden;
 }
 
 .foto {
-    width: 400px;
+    display: block;
+    width: 100%;
     height: auto;
-    object-fit: contain;
     border-style: solid;
-    background-color: aquamarine;
+    transition: transform 0.4s ease;
+}
+
+.cuadroinfo {
+    width: 50%;
+    height: 100px;
+    border-style: solid;
+    height: auto;
+}
+
+.cuadrotexto {
+    width: 100%;
+    padding: 20px;
+    height: 100px;
+    border-style: solid;
+    height: auto;
 }
 
 /*cuadro modal*/
@@ -55,6 +69,7 @@
     margin: auto;
 
 }
+
 .foto2 {
     width: 200px;
     height: auto;
@@ -66,18 +81,27 @@
 
 /* mediaqueries*/
 @media (max-width: 600px) {
-    .contenedor{
+    .contenedor {
         flex-direction: column;
     }
-        .contenedor2{
+
+    .contenedor2 {
         flex-wrap: wrap;
+    }
+
+    .cuadrofoto {
+        width: 100%;
+    }
+
+    .cuadroinfo {
+        width: 100%;
     }
 
 }
 
 @media (max-width: 800px) {
 
-    .contenedor2{
+    .contenedor2 {
         flex-wrap: wrap;
     }
 
