--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,12 +6,7 @@
     box-sizing: border-box;
 }
 
-
-
 /* HEADER */
-
-
-
 header {
     background-color: #7fbd1b;
     display: flex;
@@ -29,14 +24,10 @@ header {
     width: 30%;
     height: 30%;
     border-radius: 50%;
-    margin: 0.4rem;
+    margin-left: 4rem;
 }
 
-
-
 /* NAV */
-
-
 nav {
     display: flex;
     flex-direction: row;
@@ -47,14 +38,12 @@ nav {
 nav ul {
     display: flex;
     list-style: none;
-
 }
 
-nav ul li {
-    text-decoration: underline;
-    text-underline-offset: 4px;
+nav ul li a{
+    text-decoration: none;
+    color: black;
     padding: 1rem;
-    font-family: "Montserrat";
     font-size: 1.2rem;
 }
 
@@ -62,10 +51,6 @@ nav ul li {
 
 
 /* LANGUAGE MENU */
-
-
-
-
 .language-menu {
     margin-left: auto;
     padding-right: 2.5rem;
@@ -76,6 +61,9 @@ nav ul li {
     gap: 0.3rem;
 }
 
+/* ----------------------------------------------------
+    AQUI EMPIEZA EL CUERPO DE LA PAGINA INDEX
+------------------------------------------------------*/
 main {
     background-color: white;
     display: flex;
@@ -138,38 +126,27 @@ h1 {
     color: white;
 }
 
-/* CAROUSEL */
-
-.carousel {
-    position: relative;  /* para que los hijos se posicionen dentro */
+/*-------------------------------------------------------
+        AQUI DEBO AGREGAR STYLE DEL CARRUSEL
+------------------------------------------------------ */
+.carrusel {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
     width: 100%;
-    height: 60vh;        /* altura del carrusel */
-    overflow: hidden;    /* recorta lo que se salga del contenedor */
+    height: 100vh;
 }
 
-.carousel img {
-   
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;   
-    opacity: 0;        
-    transition: opacity 1s ease-in-out;
-    z-index:0;
+.imagenes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
 }
-
-.carousel img.active {
-    opacity: 1;        
-}
-
-
 
 
 /* FOOTER */
-
-
-
 footer {
     background-color:#E2FFB4;
     width: 100%;
