--- a/assets/css/Detalle.css
+++ b/assets/css/Detalle.css
@@ -65,13 +65,14 @@
     justify-content: space-between;
     border-style: solid;
     padding: 10px;
-    max-width: 900px;
+    width: 80%;
+    gap: 20px;
     margin: auto;
 
 }
 
 .foto2 {
-    width: 200px;
+    width: 25%;
     height: auto;
     object-fit: contain;
     border-style: solid;
