--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -59,6 +59,21 @@ nav ul li {
 
 /* MAIN */
 
+body {
+    background-color:white 
+
+}
+
+.formCompra {
+    width: 90%;
+    margin: auto;
+    display: flex;
+    border: black;
+    
+
+}
+
+
 
 /* FOOTER */
 
@@ -81,7 +96,7 @@ footer {
 .endfooter {
     background-color: black;
     width: 100%;
-    height: auto;
+    height: 2rem;
     display: flex;
     justify-content: center;
     color: white;
