--- a/assets/css/modal.css
+++ b/assets/css/modal.css
@@ -21,7 +21,7 @@
     .pop-wrap{ 
         display: flex;
         align-items: center;
-        width: 90%;
+        width: 100%;
         max-width: 950px;
 
 
@@ -91,35 +91,20 @@
         font-weight: 500;
         font-size: 40px;
         color: #1f4068;
-        margin-bottom: 15px;
+        margin-bottom: 4rem;
 }
 
 .sub-content p {
     font-weight: 500;
-    color: #1bc59b;
-    margin-bottom: 30px;
-}
-.subs-email{
-    width: 100%;
-    padding: 15px;
-    border: none;
-    background: #ccc;
-    margin-bottom: 15px;
-}
-
-.subs-send{
-    width: 100%;
-    padding: 15px;
-    border: none;
-    background: #e43f54;
-    color: #fff;
-    font-size: 18px;
-    cursor: pointer;
+    font-size: 1.5rem;
+    color: #1f4068;
     margin-bottom: 20px;
-    transition: 0.25s ease background;
 }
-.subs-send:hover{
-    background: #1bc59b;
+.sub-content  .accion {
+    font-weight: bold;
+    font-size: 1.8rem;
+    color: #f56b37;
+    text-shadow: 0px 0px 15px black;
 }
 
     .line {
