--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -1,45 +1,12 @@
-     * {
-         margin: 0;
-         padding: 0;
+   @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass+Mono:wght@300..700&family=Pacifico&display=swap');
 
-     }
-
-
-
-     header {
-         background-color: #E2FFB4;
-         display: flex;
-         align-items: center;
-         height: 6rem;
-         padding: 0 2rem;
-     }
-
-     .header-logo {
-         display: flex;
-         align-items: center;
-     }
-
-     .header-logo img {
-         width: 60px;
-         height: 60px;
-         border-radius: 50%;
-         margin-right: 1rem;
-     }
-
-     nav {
-         display: flex;
-         flex: 1;
-         justify-content: space-between;
-         align-items: center;
-     }
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 
-     .language-menu ul {
-         display: flex;
-         gap: 0.5rem;
-         margin: 0;
-         padding: 0;
-     }
 
 
      /*--CAJA QUE RODEA EL FORMULARIO DE FILTROS Y PRODUCTOS--> */
@@ -136,34 +103,6 @@
 
 
 
-
-
-     /* FOOTER */
-     footer {
-         background-color: #E2FFB4;
-         width: 100%;
-         height: auto;
-         display: flex;
-         justify-content: center;
-     }
-
-     .page-info {
-         font-family: "Overpass Mono";
-         font-size: 1rem;
-         margin: 5rem;
-         color: black;
-     }
-
-     .endfooter {
-         background-color: black;
-         width: 100%;
-         height: auto;
-         display: flex;
-         justify-content: center;
-         color: white;
-         font-family: "Overpass Mono";
-         font-size: 0.8rem;
-     }
 
 
 
