--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -1,12 +1,15 @@
+     @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass+Mono:wght@300..700&family=Pacifico&display=swap');
+     
      * {
          margin: 0;
          padding: 0;
+         box-sizing: border-box;
 
      }
 
 
 
-     header {
+     /* header {
          background-color: #E2FFB4;
          display: flex;
          align-items: center;
@@ -39,7 +42,7 @@
          gap: 0.5rem;
          margin: 0;
          padding: 0;
-     }
+     }*/
 
 
      /*--CAJA QUE RODEA EL FORMULARIO DE FILTROS Y PRODUCTOS--> */
@@ -138,7 +141,7 @@
 
 
 
-     /* FOOTER */
+     /* FOOTER 
      footer {
          background-color: #E2FFB4;
          width: 100%;
@@ -163,7 +166,7 @@
          color: white;
          font-family: "Overpass Mono";
          font-size: 0.8rem;
-     }
+     }*/
 
 
 
