--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -16,7 +16,7 @@
          padding: 10px;
          border-radius: 10px;
          box-sizing: border-box;
-         justify-content: center;
+         display: flex;
      }
 
 
