--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,22 +157,42 @@ main {
     color: #7fbd1b;
 }
 
+/*-------------------------------------------------------
+        AQUI TENEMOS LOS PRODUCTOS DESTACADOS
+------------------------------------------------------ */
+    #products-destacados{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 1rem;
+        font-family: "Overpass Mono";
+    }
+     .card {
+         margin: 2rem;
+         border: 1px solid black;
+         padding: 1rem;
+         display: flex;
+         flex-direction: column;
+         align-items: center;
+         justify-content: space-between;
+         height: 400px;
+     }
+     .tarjeta-img{
+         width: 100%;
+         height: 300px;
+         object-fit: cover;
+         transition: transform 0.4s ease;
+         cursor: pointer;
+     }
+     .card-tarjeta:hover .tarjeta-img {
+         transform: scale(1.1);
 
+     }
 
-.products-viewer {
-    background-color: #FFC59C;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-}
+     .tarjeta-informacion {
+         text-align: center;
+         margin-top: 1rem;
+     }
 
-.products-viewer h2 {
-    font-family: "Pacifico";
-    font-size: 2rem;
-    margin: 5rem;
-    color: white;
-}
 
 .workshop-viewer {
     background-color: #F2E7D5;
@@ -225,6 +245,7 @@ footer a{
     margin-bottom: 1rem;
     margin-left: -3rem;
     font-size: 2rem;
+    font-family: "Pacifico";
     }
 
 .footer-section-2{
