--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -160,38 +160,38 @@ main {
 /*-------------------------------------------------------
         AQUI TENEMOS LOS PRODUCTOS DESTACADOS
 ------------------------------------------------------ */
-    #products-destacados{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        padding: 1rem;
-        font-family: "Overpass Mono";
-    }
-     .card {
-         margin: 2rem;
-         border: 1px solid black;
-         padding: 1rem;
-         display: flex;
-         flex-direction: column;
-         align-items: center;
-         justify-content: space-between;
-         height: 400px;
-     }
-     .tarjeta-img{
-         width: 100%;
-         height: 300px;
-         object-fit: cover;
-         transition: transform 0.4s ease;
-         cursor: pointer;
-     }
-     .card-tarjeta:hover .tarjeta-img {
-         transform: scale(1.1);
+#products-destacados{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    padding: 1rem;
+    font-family: "Overpass Mono";
+}
+.card-tarjeta {
+    margin: 0.5rem;
+    border: 1px solid black;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    height: 400px;
+}
+.tarjeta-img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    transition: transform 0.4s ease;
+    cursor: pointer;
+}
+.card-tarjeta:hover .tarjeta-img {
+    transform: scale(1.1);
 
-     }
+}
 
-     .tarjeta-informacion {
-         text-align: center;
-         margin-top: 1rem;
-     }
+.tarjeta-informacion {
+    text-align: center;
+    margin-top: 1rem;
+}
 
 
 .workshop-viewer {
