--- a/assets/css/checkout.css
+++ b/assets/css/checkout.css
@@ -60,7 +60,9 @@ nav ul li {
 /* MAIN */
 
 main { 
-    background-color:white 
+    background-color:white ;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -69,23 +71,56 @@ h1 {
     font-family: pacifico;
 }
 
-form {
-    margin: 0%;
-    width: 400px;
+.formCompra {
+    
+    display: flex;
+    width: 50rem; 
+    flex-direction: column ;
+    align-items: center;
 
-    padding: 1em;
-    border: 1px solid #ccc;
     border-radius: 1em;
+    box-shadow: 0px 0px 30px rgba(0,0,0,.4);
+
+   
+   
+    margin: 30px auto;
+    padding:25px;
+      border-radius: 8px;
+    
+    display: flex;  
+}
+
+.formCompra input {
+    padding: 0.7rem;
+}
+
+.formCompra button {
+    padding: 1remd;
+}
+
+h4 {
+    font-size: 1.4rem;
 
 }
-.formCompra {
-    width: 50%;
-    margin: auto;
+
+
+.formCliente, .formEnvio {
+    width: 25rem;
     display: flex;
-    border: black;
-    padding: 1rem;
-    display: flex;
-    
+    flex-direction: column;
+    padding: 2rem;
+
+}
+
+
+
+
+label {
+    display: block;
+    margin-top: 15px;
+    font-weight: bold;
+    font-size: 0.9rem;
+    margin-top: rem;
 
 }
 
