--- a/assets/css/productos.css
+++ b/assets/css/productos.css
@@ -30,6 +30,7 @@
     }
 
     .card {
+        box-shadow: 0px 0px 30px rgba(0,0,0,.4);
         border: 3px dotted #7fbd1b;
         margin: 2rem;
         padding: 1rem;
@@ -68,6 +69,7 @@
     }
 
     .agregar {
+        box-shadow: 0px 0px 30px rgba(0,0,0,.4);
         width: 70%;
         height: 3rem;
         border-radius: 2rem;
@@ -80,7 +82,6 @@
 
     .agregar:hover{
         box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
-
     }
 
 
