--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -5rem;
+    margin-top: -9rem;
 }
 .puntos p{
     font-size: 100px;
@@ -160,6 +160,11 @@ main {
 /*-------------------------------------------------------
         AQUI TENEMOS LOS PRODUCTOS DESTACADOS
 ------------------------------------------------------ */
+.subtitulo{
+    font-size: 3rem;
+    text-shadow: 0px 0px 1rem #990909;
+    margin-top: 5rem;
+}
 #products-destacados{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
@@ -167,14 +172,16 @@ main {
     font-family: "Overpass Mono";
 }
 .card-tarjeta {
+    box-shadow: 0px 0px 30px rgba(0,0,0,.4);
+    border: 3px dotted #7fbd1b;
     margin: 0.5rem;
-    border: 1px solid black;
     padding: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
-    height: 400px;
+    height: 450px;
+    border-radius: 0.7rem;
+    align-items: center;
 }
 .tarjeta-img{
     width: 100%;
@@ -182,15 +189,29 @@ main {
     object-fit: cover;
     transition: transform 0.4s ease;
     cursor: pointer;
+    border-radius: 0.7rem;
 }
 .card-tarjeta:hover .tarjeta-img {
     transform: scale(1.1);
-
 }
-
 .tarjeta-informacion {
     text-align: center;
     margin-top: 1rem;
+    text-shadow: 0px 0px 1rem black;
+}
+.agregar {
+    box-shadow: 0px 0px 30px rgba(0,0,0,.4);
+    width: 70%;
+    height: 3rem;
+    border-radius: 2rem;
+    margin-top: 0.5rem;
+    background-color: #7fbd1b;
+    color: white;
+    border: #7fbd1b;
+    cursor: pointer;
+}
+.agregar:hover{
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
 }
 
 
