--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,6 +72,13 @@ main {
     align-items: center;
     font-family: "Montserrat";
 }
+#reloj{
+    margin: 1rem 2rem;
+    font-weight: bold;
+    color: #7fbd1b;
+    text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+    font-size: 1.3rem;
+}
 /*-------------------------------------------------------
         AQUI DEBO AGREGAR STYLE DEL CARRUSEL
 ------------------------------------------------------ */
@@ -142,7 +149,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: -9rem;
+    margin-top: -10.5rem;
 }
 .puntos p{
     font-size: 100px;
@@ -214,22 +221,70 @@ main {
     box-shadow: 4px 4px 10px rgba(0,0,0,0.3);
 }
 
-
-.workshop-viewer {
-    background-color: #F2E7D5;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
+/*-------------------------------------------------------
+        NUESTRO TALLER
+------------------------------------------------------ */
+.subcontainer-taller {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    text-align: center; 
+    margin-bottom: 5rem;
+}
+.taller-titulo{
+    font-size: 3rem;
+    text-shadow: 0px 0px 1rem #990909;
+    margin-top: 8rem; 
+    text-align: center;
+    margin-bottom: 1rem; 
+}
+.taller-img {
+    grid-area: 1 / 1 / 2 / 2;
+    width: 45rem;
+    margin-left: 4rem;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 30px rgba(0,0,0,.4);
+}
+.taller-texto{
+    grid-area: 1 / 2 / 2 / 3;
+    margin: 2rem 5rem 8rem 2rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-align: justify;
+    border: 3px dotted #ffc595;
+}
+.taller-texto p{
+    margin: 2rem;
+}
+/* -----------------------------------------------------------
+segunda parte de Nuestro Taller 
+-------------------------------------------------------------*/
+.subcontainer-taller-dos {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    text-align: center; 
+    margin-bottom: 4rem;
 }
 
-.workshop-viewer h2 {
-    font-family: "Pacifico";
-    font-size: 2rem;
-    margin: 5rem;
-    color: white;
+.taller-texto-dos{
+    grid-area: 1 / 1 / 2 / 2;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    text-align: justify;
+    border: 3px dotted #ffc595;
+}
+.taller-texto-dos p{
+    margin: 2rem;
 }
 
+.taller-img-dos {
+    grid-area: 1 / 2 / 2 / 3;
+    width: 35rem;
+    margin-right: 3rem;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 30px rgba(0,0,0,.4);
+}
 
 
 /* ---------------------------------------------------------
