--- a/assets/css/cart.css
+++ b/assets/css/cart.css
@@ -1,59 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Overpass+Mono:wght@300..700&family=Pacifico&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
 header {
-    background-color: #E2FFB4;
-    display: flex;
-    align-items: center;
-    height: 6rem;
+        font-family: "Overpass Mono", monospace;
 }
 
-.header-logo {
-    padding-left: 2rem;
-    display: flex;
-    align-items: center;
-}
-
-.header-logo img {
-    width: 30%;
-    height: 30%;
-    border-radius: 50%;
-    margin: 0.4rem;
-}
-
-nav {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    justify-content: space-between;
-}
-
-nav ul {
-    display: flex;
-    list-style: none;
-    gap: 1.5rem;
-}
-
-nav ul li {
-    padding: 0.5rem;
-    font-family: "Montserrat";
-    font-size: 1.2rem;
-}
-
-.language-menu {
-    margin-left: auto;
-    padding-right: 2.5rem;
-}
-
-.language-menu ul {
-    display: flex;
-    gap: 0.3rem;
-}
 
 /* INICIO DE LA SECCIÓN PRINCIPAL */
 
@@ -284,32 +240,3 @@ main {
 
 
 /* FIN DE LA SECCIÓN PRINCIPAL */
-
-
-
-
-footer {
-    background-color:#E2FFB4;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-}
-
-.page-info {
-    font-family: "Overpass Mono";
-    font-size: 1rem;
-    margin: 5rem;
-    color: black;
-}
-
-.endfooter {
-    background-color: black;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-family: "Overpass Mono";
-    font-size: 0.8rem;
-}
