--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,9 @@ nav ul li a{
 
 
 /* LANGUAGE MENU */
+.carrit{
+    margin-right: 2rem;
+}
 .language-menu {
     margin-left: auto;
     padding-right: 2.5rem;
@@ -75,9 +78,8 @@ main {
 #reloj{
     margin: 1rem 2rem;
     font-weight: bold;
-    color: #1c2572;
     text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
-    font-size: 1.5rem;
+    text-align: end;
 }
 /*-------------------------------------------------------
         AQUI DEBO AGREGAR STYLE DEL CARRUSEL
@@ -185,10 +187,10 @@ main {
     padding: 1rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     height: 450px;
     border-radius: 0.7rem;
-    align-items: center;
 }
 .tarjeta-img{
     width: 100%;
