--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,11 +100,12 @@ main {
 }
 .img{
     box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.85);
-    height: 60rem;
+    height: 45rem;
     width: 120rem;
     border-radius: 1rem;
     margin: 0.5rem;
     object-fit: cover;
+    margin-top: -10.5em;
 }
 .iconos {
     width: 2rem;
