agregar al carrito desde  las tarjetas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -389,3 +389,19 @@ footer a{
     padding-bottom: 1rem;
 }
 
+
+@media screen and (max-width: 1024px) {
+    
+    
+
+}
+@media screen and (max-width: 768px) {
+
+  
+}
+
+@media screen and (max-width: 425px) {
+
+  
+
+}
